--- a/config.toml
+++ b/config.toml
@@ -252,6 +252,7 @@ theme = "hugo-creative-theme"
       [params.conference.talks.talk05]
         title = " Engineering Efficiency powered by Go"
         class = "timeline-sub-header"
+        timerange = "10.30am"
         profile = "huy-do.png"
         name = "Huy Do"
         fragmentid = "do-xuan-huy"
@@ -275,6 +276,7 @@ theme = "hugo-creative-theme"
       [params.conference.talks.talk08]
         title = "Distributed Scheduler Hell"
         class = "timeline-sub-header"
+        timerange = "12.00pm"
         profile = "matthewcampbell.png"
         name = "Matthew Campbell"
         fragmentid = "matthew-campbell"
@@ -283,8 +285,9 @@ theme = "hugo-creative-theme"
       [params.conference.talks.talk09]
         title = "Native Go Development on GCP with the Context Package"
         class = "timeline-sub-header"
+        timerange = "12.30pm"
         talk = "Ian and Shilin will tag team in this presentation. The talk will demonstrate(via Kubernetes) how well golang is supported in Cloud Platforms from development, API integration to deployment and operations. In addition, a deep dive into Golang context package and best practices in high concurrency programming will also be covered."
-		fragmentid = "google"
+		    fragmentid = "google"
         [params.conference.talks.talk09.speakers]
           [params.conference.talks.talk09.speakers.ian]
             profile = "ian-lewis.png"
@@ -313,6 +316,7 @@ theme = "hugo-creative-theme"
       [params.conference.talks.talk12]
         title = "Runtime & Concurrency in Go."
         class = "timeline-sub-header"
+        timerange = "2.30pm"
         profile = "ent.jpg"
         name = "V N Nikhil Anurag"
         fragmentid = "ent"
@@ -321,6 +325,7 @@ theme = "hugo-creative-theme"
       [params.conference.talks.talk13]
         title = "TDD for those who don't need it"
         class = "timeline-sub-header"
+        timerange = "3.00pm"
         profile = "chewchoonkeat.jpg"
         name = "Chew Choon Keat"
         fragmentid = "choon-keat"
@@ -329,6 +334,7 @@ theme = "hugo-creative-theme"
       [params.conference.talks.talk14]
         title = "The Hidden Power of Humble Interfaces (lightning talk)"
         class = "timeline-sub-header"
+        timerange = "3.30pm"
         profile = "aditya.png"
         name = "Aditya Mukerjee"
         fragmentid = "aditya-mukerjee"
@@ -352,6 +358,7 @@ theme = "hugo-creative-theme"
       [params.conference.talks.talk17]
         title = "Dgraph - A distributed graph database written in Go"
         class = "timeline-sub-header"
+        timerange = "4.30pm"
         profile = "manishraijain.jpg"
         name = "Manish Rai Jain"
         fragmentid = "manish-rai-jain"
@@ -360,6 +367,7 @@ theme = "hugo-creative-theme"
       [params.conference.talks.talk18]
         title = "chromedp: A New Way to Drive the Web"
         class = "timeline-sub-header"
+        timerange = "5.00pm"
         profile = "kennethshaw.jpg"
         name = "Kenneth Shaw"
         fragmentid = "kenneth-shaw"
@@ -368,6 +376,7 @@ theme = "hugo-creative-theme"
       [params.conference.talks.talk19]
         title = "Getting started on Ethereum for Go programmers"
         class = "timeline-sub-header"
+        timerange = "5.30pm"
         profile = "daveappleton.png"
         name = "Dave Appleton"
         fragmentid = "dave-appleton"
@@ -376,6 +385,7 @@ theme = "hugo-creative-theme"
       [params.conference.talks.talk20]
         title = "Concurrency made easy"
         class = "timeline-sub-header"
+        timerange = "6.00pm"
         profile = "dave_cheney.jpg"
         name = "Dave Cheney"
         fragmentid = "dave-cheney"
