--- a/config.toml
+++ b/config.toml
@@ -222,7 +222,7 @@ theme = "hugo-creative-theme"
         title = "$GOPHERCONSG/doors/open"
         class = "timeline-mono-header"
         timerange = "8.00am"
-        talk = "Registration"
+        talk = "Registration & Breakfast Reception"
 
       [params.conference.talks.talk02]
         title = "Opening Remarks"
@@ -234,7 +234,7 @@ theme = "hugo-creative-theme"
       [params.conference.talks.talk03]
         title = "Opening Keynote: Exporting Go"
         class = "timeline-sub-header"
-        timerange = "9.15am"
+        timerange = "9.10am"
         profile = "Robert-Griesemer.jpg"
         name = "Robert Griesemer"
         fragmentid = "robertgriesemer"
@@ -243,7 +243,7 @@ theme = "hugo-creative-theme"
       [params.conference.talks.talk04]
         title = "Go Concurrency Live"
         class = "timeline-sub-header"
-        timerange = "10.00am"
+        timerange = "9.40am"
         profile = "williamkennedy.jpg"
         name = "William Kennedy"
         fragmentid = "william-kennedy"
@@ -252,22 +252,22 @@ theme = "hugo-creative-theme"
       [params.conference.talks.talk05]
         title = " Engineering Efficiency powered by Go"
         class = "timeline-sub-header"
-        timerange = "10.30am"
+        timerange = "10.05am"
         profile = "huy-do.png"
         name = "Huy Do"
         fragmentid = "do-xuan-huy"
         talk = "In LINE engineering efficiency team, we solve organization scale problem by building tools which improve engineer productivity and unified processes.  In this talk, we discover how small tools and automation of development process can help improve your company engineering efficiency, reduce repeatable work and stresses."
-
+  
       [params.conference.talks.talk06]
         title = "$GOPHERCONSG/teabreak"
         class = "timeline-mono-header"
-        timerange = "11.00am"
+        timerange = "10.30am"
         talk = "Coffee and snacks"
 
       [params.conference.talks.talk07]
         title = "Writing Efficient Generic Multidimensional Slices"
         class = "timeline-sub-header"
-        timerange = "11.30am"
+        timerange = "11.00am"
         profile = "chewxy.jpg"
         name = "Chewxy"
         fragmentid = "chewxy"
@@ -276,7 +276,7 @@ theme = "hugo-creative-theme"
       [params.conference.talks.talk08]
         title = "Distributed Scheduler Hell"
         class = "timeline-sub-header"
-        timerange = "12.00pm"
+        timerange = "11.25am"
         profile = "matthewcampbell.png"
         name = "Matthew Campbell"
         fragmentid = "matthew-campbell"
@@ -285,7 +285,7 @@ theme = "hugo-creative-theme"
       [params.conference.talks.talk09]
         title = "Native Go Development on GCP with the Context Package"
         class = "timeline-sub-header"
-        timerange = "12.30pm"
+        timerange = "11.50am"
         talk = "Ian and Shilin will tag team in this presentation. The talk will demonstrate(via Kubernetes) how well golang is supported in Cloud Platforms from development, API integration to deployment and operations. In addition, a deep dive into Golang context package and best practices in high concurrency programming will also be covered."
 		    fragmentid = "google"
         [params.conference.talks.talk09.speakers]
@@ -301,13 +301,13 @@ theme = "hugo-creative-theme"
       [params.conference.talks.talk10]
         title = "$GOPHERCONSG/lunch/time"
         class = "timeline-mono-header"
-        timerange = "1.00pm"
+        timerange = "12.30pm"
         talk = "Food for the brain"
 
       [params.conference.talks.talk11]
         title = "Distributed Tracing in Grab"
         class = "timeline-sub-header"
-        timerange = "2.00pm"
+        timerange = "1.45pm"
         profile = "ryanlaw.jpg"
         name = "Ryan Law"
         fragmentid = "ryan-law"
@@ -316,7 +316,7 @@ theme = "hugo-creative-theme"
       [params.conference.talks.talk12]
         title = "Runtime & Concurrency in Go."
         class = "timeline-sub-header"
-        timerange = "2.30pm"
+        timerange = "2.10pm"
         profile = "ent.jpg"
         name = "V N Nikhil Anurag"
         fragmentid = "ent"
@@ -325,7 +325,7 @@ theme = "hugo-creative-theme"
       [params.conference.talks.talk13]
         title = "TDD for those who don't need it"
         class = "timeline-sub-header"
-        timerange = "3.00pm"
+        timerange = "2.35pm"
         profile = "chewchoonkeat.jpg"
         name = "Chew Choon Keat"
         fragmentid = "choon-keat"
@@ -334,7 +334,7 @@ theme = "hugo-creative-theme"
       [params.conference.talks.talk14]
         title = "The Hidden Power of Humble Interfaces (lightning talk)"
         class = "timeline-sub-header"
-        timerange = "3.30pm"
+        timerange = "2.55pm"
         profile = "aditya.png"
         name = "Aditya Mukerjee"
         fragmentid = "aditya-mukerjee"
@@ -343,22 +343,22 @@ theme = "hugo-creative-theme"
       [params.conference.talks.talk15]
         title = "$GOPHERCONSG/teabreak"
         class = "timeline-mono-header"
-        timerange = "3.45pm"
+        timerange = "3.10pm"
         talk = "Coffee and snacks"
 
       [params.conference.talks.talk16]
         title = "Building CLI apps with Go (lightning talk)"
         class = "timeline-sub-header"
-        timerange = "4.15pm"
+        timerange = "3.40pm"
         profile = "lakshan.jpg"
         name = "Lakshan Perera"
         fragmentid = "lakshan-perera"
         talk = "Writing and managing cross-platform CLI applications are hard. Thanks to varying configurations and dependencies every single installation and update can be flaky. Diagnosing causes, reproducing them and applying fixing are usually a time sink. In this talk, you will learn how Go can help to alleviate many of those pains with its statically compiled binaries."
-
+  
       [params.conference.talks.talk17]
         title = "Dgraph - A distributed graph database written in Go"
         class = "timeline-sub-header"
-        timerange = "4.30pm"
+        timerange = "3.55pm"
         profile = "manishraijain.jpg"
         name = "Manish Rai Jain"
         fragmentid = "manish-rai-jain"
@@ -367,7 +367,7 @@ theme = "hugo-creative-theme"
       [params.conference.talks.talk18]
         title = "chromedp: A New Way to Drive the Web"
         class = "timeline-sub-header"
-        timerange = "5.00pm"
+        timerange = "4.20pm"
         profile = "kennethshaw.jpg"
         name = "Kenneth Shaw"
         fragmentid = "kenneth-shaw"
@@ -376,7 +376,7 @@ theme = "hugo-creative-theme"
       [params.conference.talks.talk19]
         title = "Getting started on Ethereum for Go programmers"
         class = "timeline-sub-header"
-        timerange = "5.30pm"
+        timerange = "4.55pm"
         profile = "daveappleton.png"
         name = "Dave Appleton"
         fragmentid = "dave-appleton"
@@ -385,7 +385,7 @@ theme = "hugo-creative-theme"
       [params.conference.talks.talk20]
         title = "Concurrency made easy"
         class = "timeline-sub-header"
-        timerange = "6.00pm"
+        timerange = "5.20pm"
         profile = "dave_cheney.jpg"
         name = "Dave Cheney"
         fragmentid = "dave-cheney"
@@ -394,6 +394,7 @@ theme = "hugo-creative-theme"
       [params.conference.talks.talk21]
         title = "Closing Keynote: To be announced"
         class = "timeline-sub-header"
+        timerange = "5.45pm"
         profile = "ajey-gore.jpg"
         name = "Ajey Gore"
         fragmentid = "ajey-gore"
