--- a/config.toml
+++ b/config.toml
@@ -86,7 +86,7 @@ theme = "hugo-creative-theme"
        brand = "https://twitter.com/AjeyGore"
        caption = "Go-Jek"
        bio = "Ajey is the Group CTO of [Go-Jek](https://www.go-jek.com/). With 17 years of experience in building core technology strategy across diverse domains, Ajey has helped several businesses through technology transformations at [ThoughtWorks](https://www.thoughtworks.com/) and [CodeIgnition](https://twitter.com/codeignition). Ajey is the founder of CodeIgnition and an active influencer in the technology community."
-       title = "TBA"
+       title = "Go get go-jek"
 
     [params.speakers.speaker_talk_a]
        profile = "huy-do.png"
@@ -153,7 +153,7 @@ theme = "hugo-creative-theme"
        name = "Choon Keat"
        fragmentid = "choon-keat"
        brand = "https://twitter.com/choonkeat"
-       caption = "Singapore Power Ltd"
+       caption = "SP Group"
        bio = "Started the Singapore Ruby Brigade, worked at Slideshare, believes strongly in and contributes to open source. Now available in Go."
        title = "TDD for those who don't need it"
 
@@ -257,7 +257,7 @@ theme = "hugo-creative-theme"
         name = "Huy Do"
         fragmentid = "do-xuan-huy"
         talk = "In LINE engineering efficiency team, we solve organization scale problem by building tools which improve engineer productivity and unified processes.  In this talk, we discover how small tools and automation of development process can help improve your company engineering efficiency, reduce repeatable work and stresses."
-  
+
       [params.conference.talks.talk06]
         title = "$GOPHERCONSG/teabreak"
         class = "timeline-mono-header"
@@ -307,7 +307,7 @@ theme = "hugo-creative-theme"
       [params.conference.talks.talk11]
         title = "Distributed Tracing in Grab"
         class = "timeline-sub-header"
-        timerange = "1.45pm"
+        timerange = "1.50pm"
         profile = "ryanlaw.jpg"
         name = "Ryan Law"
         fragmentid = "ryan-law"
@@ -316,7 +316,7 @@ theme = "hugo-creative-theme"
       [params.conference.talks.talk12]
         title = "Runtime & Concurrency in Go."
         class = "timeline-sub-header"
-        timerange = "2.10pm"
+        timerange = "2.15pm"
         profile = "ent.jpg"
         name = "V N Nikhil Anurag"
         fragmentid = "ent"
@@ -325,7 +325,7 @@ theme = "hugo-creative-theme"
       [params.conference.talks.talk13]
         title = "TDD for those who don't need it"
         class = "timeline-sub-header"
-        timerange = "2.35pm"
+        timerange = "2.40pm"
         profile = "chewchoonkeat.jpg"
         name = "Chew Choon Keat"
         fragmentid = "choon-keat"
@@ -334,7 +334,7 @@ theme = "hugo-creative-theme"
       [params.conference.talks.talk14]
         title = "The Hidden Power of Humble Interfaces (lightning talk)"
         class = "timeline-sub-header"
-        timerange = "2.55pm"
+        timerange = "3.05pm"
         profile = "aditya.png"
         name = "Aditya Mukerjee"
         fragmentid = "aditya-mukerjee"
@@ -343,22 +343,22 @@ theme = "hugo-creative-theme"
       [params.conference.talks.talk15]
         title = "$GOPHERCONSG/teabreak"
         class = "timeline-mono-header"
-        timerange = "3.10pm"
+        timerange = "3.20pm"
         talk = "Coffee and snacks"
 
       [params.conference.talks.talk16]
         title = "Building CLI apps with Go (lightning talk)"
         class = "timeline-sub-header"
-        timerange = "3.40pm"
+        timerange = "3.50pm"
         profile = "lakshan.jpg"
         name = "Lakshan Perera"
         fragmentid = "lakshan-perera"
         talk = "Writing and managing cross-platform CLI applications are hard. Thanks to varying configurations and dependencies every single installation and update can be flaky. Diagnosing causes, reproducing them and applying fixing are usually a time sink. In this talk, you will learn how Go can help to alleviate many of those pains with its statically compiled binaries."
-  
+
       [params.conference.talks.talk17]
         title = "Dgraph - A distributed graph database written in Go"
         class = "timeline-sub-header"
-        timerange = "3.55pm"
+        timerange = "4.05pm"
         profile = "manishraijain.jpg"
         name = "Manish Rai Jain"
         fragmentid = "manish-rai-jain"
@@ -367,7 +367,7 @@ theme = "hugo-creative-theme"
       [params.conference.talks.talk18]
         title = "chromedp: A New Way to Drive the Web"
         class = "timeline-sub-header"
-        timerange = "4.20pm"
+        timerange = "4.30pm"
         profile = "kennethshaw.jpg"
         name = "Kenneth Shaw"
         fragmentid = "kenneth-shaw"
@@ -392,7 +392,7 @@ theme = "hugo-creative-theme"
         talk = "Go's headline feature is its simple, lightweight concurrency, but most Go programmers that stick with the language for a while tend to look back on their early efforts and say things like \"wow, I really went overboard with channels\" or \"I went crazy with goroutines, it was impossible to understand what the program did\". Clearly there is a disconnect between the concurrency primitives that the language offers, and the expectations of many why come to Go for exactly those features. This talk will explore some strategies for using with concurrency in Go without the pitfalls."
 
       [params.conference.talks.talk21]
-        title = "Closing Keynote: To be announced"
+        title = "Closing Keynote: Go get go-jek"
         class = "timeline-sub-header"
         timerange = "5.45pm"
         profile = "ajey-gore.jpg"
